--- a/app-to-dos/css/app.css
+++ b/app-to-dos/css/app.css
@@ -6,7 +6,6 @@
 @media screen and (max-width: 600px) {
     body {
         background: url("../notebook.png") no-repeat top;
-        background-size: contain;
     }
 }
 
@@ -105,6 +104,7 @@
         padding: 20px 0;
         margin: 0;
         width: 100%;
+        background: #FFF;
     }
 }
 
